change service file for loopdevice role
Signed-off-by: Liu Qing <liuqing@chinac.com>

--- a/roles/loopback-device/defaults/main.yml
+++ b/roles/loopback-device/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for loopback-device
 #
-device_name: iscsi-backend
-device_size: 100M
-device_file: /root/loop1
+device_file: /root/iscsi-backend2
+device_size: 10G
+device_name: loop2
