--- a/roles/tgtd/defaults/main.yml
+++ b/roles/tgtd/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
 # defaults file for tgtd
-backingstore: /dev/loop1
-target_name: iqn.2017-02-07.com.chinac.tg1
+backingstore: /dev/loop3
+target_iqn: iqn.2017-02-07.com.chinac.tg3
+tid: 3
