--- a/roles/vim-plugins/tasks/main.yml
+++ b/roles/vim-plugins/tasks/main.yml
@@ -18,3 +18,9 @@
 
 - name: install plugins
   shell: vim +PluginInstall +qall
+
+- name: update colorama
+  pip: name=colorama state=latest
+
+- name: install jedi
+  pip: name=jedi
