use gitbook generate books
Signed-off-by: Liu Qing <liuqing@chinac.com>

--- a/roles/vim-plugins/tasks/main.yml
+++ b/roles/vim-plugins/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
 # tasks file for vim-plugins
 #
+- name: install git
+  yum: name=git
+
 - name: git clone Vundle
   git:
     repo: "https://github.com/VundleVim/Vundle.vim.git"
