--- a/roles/vim-plugins/tasks/main.yml
+++ b/roles/vim-plugins/tasks/main.yml
@@ -28,5 +28,13 @@
   pip: name=jedi
   become: yes
 
+- name: install ctags
+  package: name=ctags
+  become: yes
+
+- name: install cscope
+  package: name=cscope
+  become: yes
+
 - name: install plugins
   shell: vim +PluginInstall +qall
