--- a/roles/tmux/templates/tmux.conf
+++ b/roles/tmux/templates/tmux.conf
@@ -1,2 +1,4 @@
 set-option -g allow-rename off
 set-window-option -g mode-keys vi
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
